# linear_algebra1

./: README.md  pyproject.toml  requirements.txt  setup.cfg
12_matrix_multiplication/: 12_matrix_multiplication.html  12_matrix_multiplication.ipynb
14_row_reduction/: 14_P3_Assessment_GionRubitschung.ipynb  problem_2.ipynb
16_columnspace_rank/: 16_P4_Assessment_GionRubitschung.ipynb  P_3.ipynb
20_square_matrix_and_reverse/: Problem 1.ipynb
21_determinant/: Problem 1.ipynb  Problem 5 Peer Assessment.ipynb
22_matrix_powers_and_adjacency_matrix/: 22_P3_Assessment_GionRubitschung.ipynb  Problem 1.ipynb  Problem 2.ipynb
30_dot_product/: P4_Peer_Assessment.ipynb
34_least_squares_and_data_fitting/: 34_PeerAssessment_GionRubitschung.ipynb  p1.ipynb  p2.ipynb  p3.ipynb  problem_1.ipynb
35_spectral_theorem_for_symmetric_matrices/: p1.ipynb  problem_1.ipynb
38_Dimensionality_reduction_PCA/: 38_P2_PeerAssessment_GionRubitschung.ipynb
38_Dimensionality_reduction_PCA/mnist_data/: 200_0s.csv  200_1s.csv  200_2s.csv  200_3s.csv  200_4s.csv  200_5s.csv  200_6s.csv  200_7s.csv  200_8s.csv  200_9s.csv
lib/: __init__.py  errors.py  matrix_operations.py
